; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_acl_ctcam.c_mlxsw_sp_acl_ctcam_region_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_acl_ctcam.c_mlxsw_sp_acl_ctcam_region_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp = type { i32 }
%struct.mlxsw_sp_acl_ctcam_region = type { i32, %struct.mlxsw_sp_acl_ctcam_region_ops*, %struct.mlxsw_sp_acl_tcam_region* }
%struct.mlxsw_sp_acl_tcam_region = type { i32 }
%struct.mlxsw_sp_acl_ctcam_region_ops = type { i32 }

@mlxsw_sp_acl_ctcam_region_parman_ops = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlxsw_sp_acl_ctcam_region_init(%struct.mlxsw_sp* %0, %struct.mlxsw_sp_acl_ctcam_region* %1, %struct.mlxsw_sp_acl_tcam_region* %2, %struct.mlxsw_sp_acl_ctcam_region_ops* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.mlxsw_sp*, align 8
  %7 = alloca %struct.mlxsw_sp_acl_ctcam_region*, align 8
  %8 = alloca %struct.mlxsw_sp_acl_tcam_region*, align 8
  %9 = alloca %struct.mlxsw_sp_acl_ctcam_region_ops*, align 8
  store %struct.mlxsw_sp* %0, %struct.mlxsw_sp** %6, align 8
  store %struct.mlxsw_sp_acl_ctcam_region* %1, %struct.mlxsw_sp_acl_ctcam_region** %7, align 8
  store %struct.mlxsw_sp_acl_tcam_region* %2, %struct.mlxsw_sp_acl_tcam_region** %8, align 8
  store %struct.mlxsw_sp_acl_ctcam_region_ops* %3, %struct.mlxsw_sp_acl_ctcam_region_ops** %9, align 8
  %10 = load %struct.mlxsw_sp_acl_tcam_region*, %struct.mlxsw_sp_acl_tcam_region** %8, align 8
  %11 = load %struct.mlxsw_sp_acl_ctcam_region*, %struct.mlxsw_sp_acl_ctcam_region** %7, align 8
  %12 = getelementptr inbounds %struct.mlxsw_sp_acl_ctcam_region, %struct.mlxsw_sp_acl_ctcam_region* %11, i32 0, i32 2
  store %struct.mlxsw_sp_acl_tcam_region* %10, %struct.mlxsw_sp_acl_tcam_region** %12, align 8
  %13 = load %struct.mlxsw_sp_acl_ctcam_region_ops*, %struct.mlxsw_sp_acl_ctcam_region_ops** %9, align 8
  %14 = load %struct.mlxsw_sp_acl_ctcam_region*, %struct.mlxsw_sp_acl_ctcam_region** %7, align 8
  %15 = getelementptr inbounds %struct.mlxsw_sp_acl_ctcam_region, %struct.mlxsw_sp_acl_ctcam_region* %14, i32 0, i32 1
  store %struct.mlxsw_sp_acl_ctcam_region_ops* %13, %struct.mlxsw_sp_acl_ctcam_region_ops** %15, align 8
  %16 = load %struct.mlxsw_sp_acl_ctcam_region*, %struct.mlxsw_sp_acl_ctcam_region** %7, align 8
  %17 = call i32 @parman_create(i32* @mlxsw_sp_acl_ctcam_region_parman_ops, %struct.mlxsw_sp_acl_ctcam_region* %16)
  %18 = load %struct.mlxsw_sp_acl_ctcam_region*, %struct.mlxsw_sp_acl_ctcam_region** %7, align 8
  %19 = getelementptr inbounds %struct.mlxsw_sp_acl_ctcam_region, %struct.mlxsw_sp_acl_ctcam_region* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 8
  %20 = load %struct.mlxsw_sp_acl_ctcam_region*, %struct.mlxsw_sp_acl_ctcam_region** %7, align 8
  %21 = getelementptr inbounds %struct.mlxsw_sp_acl_ctcam_region, %struct.mlxsw_sp_acl_ctcam_region* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %4
  %25 = load i32, i32* @ENOMEM, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %5, align 4
  br label %28

27:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %28

28:                                               ; preds = %27, %24
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i32 @parman_create(i32*, %struct.mlxsw_sp_acl_ctcam_region*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
